# pred-main-xmc4700-kit

./: .gitattributes  .gitignore  LICENSE.txt  README.md
amazon-freertos/: README.md
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/: CMakeLists.txt  README.md
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/: app_error.h  app_types.h  main.c  mqtt_task.c  mqtt_task.h  sensors_task.c  sensors_task.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/components/led/: led.c  led.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/components/micro/: mic_filter.c  mic_filter.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/mux/i2c_mux/: i2c_mux.c  i2c_mux.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/mux/spi_mux/: spi_mux.c  spi_mux.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/mux/spi_mux/LTC4332/: ltc4332.c  ltc4332.h  ltc4332_loc.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/: sensors.c  sensors.h  sensors_config.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/DPS368/: dps368_api.c  dps368_api.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/DPS368/corelib/: dps368.c  dps368.h  dps368_io.c  dps368_io.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/IM69D/: im69d_api.c  im69d_api.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/TLE496x/: tle496x_api.c  tle496x_api.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/TLE496x/TLE4964/corelib/: hall_switch.c  hall_switch.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/TLE4997/: tle4997_api.c  tle4997_api.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/TLI4971/: tli4971.c  tli4971.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/TLV493D/corelib/: tlv493d.c  tlv493d.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/TLx493D/: tli493d_api.c  tli493d_api.h  tlx493d.c  tlx493d.h  tlx493d_interface.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/TLx493D/TLE_AW2B6/: tle_aw2b6.c  tle_aw2b6.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/TLx493D/TLV_A1B6/: tlv_a1b6.c  tlv_a1b6.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/sensors/TLx493D/pal/: pal_tlx493_i2c.c  pal_tlx493_i2c.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/wireless/inventek/: ism43340_wifi.c  ism43340_wifi.h  ism43340_wifi_conf.h  ism43340_wifi_io.c  ism43340_wifi_io.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/drivers/wireless/modem/: aws_nbiot.c  aws_nbiot.h  circular_buffer.c  circular_buffer.h  uart_modem.c  uart_modem.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/infineon_code/: RTE_Components.h  console_io.c  console_io.h  entropy_hardware.c  entropy_hardware.h  entropy_hardware_alt.c  ethernet.c  ethernet.h  get_optiga_certificate.c  get_optiga_certificate.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/misc/converting/: converting.c  converting.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/misc/dbg/: dbg.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/misc/delay/: delay.c  delay.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/misc/fft/: fft.c  fft.h  fft_config.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/misc/fifo/: fifo.c  fifo.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/misc/float_to_string/: float_to_string.c  float_to_string.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/misc/json/: json.c  json.h  json_sensor.c  json_sensor.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/misc/statistic/: statistic.c  statistic.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/test/dps368_test/: dps368_test.c  dps368_test.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/test/json_sensor_test/: json_sensor_test.c  json_sensor_test.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/test/test_task/: test_task.c  test_task.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/test/tle4964_test/: tle4964_test.c  tle4964_test.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/test/tli493d_test/: tli493d_test.c  tli493d_test.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/test/tlx4966_test/: tlx4966_test.c  tlx4966_test.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/aws_demos/config_files/: FreeRTOSConfig.h  aws_demo_config.h  aws_iot_network_config.h  aws_nbiot_config.h  iot_config.h  iot_mqtt_agent_config.h
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/ports/pkcs11/: iot_pkcs11_pal.c
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/ports/secure_sockets/: nbiot_secure_sockets.c  wifi_secure_sockets.c
amazon-freertos/vendors/infineon/boards/xmc4700_relaxkit/ports/wifi/: iot_wifi.c
cdk-script/: Makefile  (+5 more)
(+434 files in other folders)
